<resources>
    <string name="app_name">Moovich</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watch_list">Watch list</string>
    <string name="recommendations">Recommendations</string>
    <string name="see_all">See all</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="watch">Watch</string>
    <string name="description">Description</string>
    <string name="actors">Actors</string>
    <string name="similar_movies">Similar movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_poster">Movie poster</string>
    <string name="backdrop">Backdrop</string>
    <string name="bookmark_button">Bookmark button</string>
    <string name="oops">Oops!…</string>
    <string name="error_empty_watch_list">You haven\'t added anything to "Watch List" </string>
    <string name="search_hint">Type title, categories, years, etc</string>
    <string name="recent">Recent</string>
    <string name="results">Results</string>
    <string name="see_all_history">See all history</string>
    <string name="filter_movies_button">Filter movies button</string>
    <string name="actor_photo">Actor photo</string>
    <string name="search_icon">Search icon</string>
</resources>