<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:orientation="vertical"
        tools:context=".presentation.search.SearchFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/title_search"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/search_plain_text_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/hint"
                    android:contentDescription="@string/search_icon" />

                <ScrollView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/searchEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/gilroy_medium"
                        android:hint="@string/search_hint"
                        android:inputType="text|textAutoComplete|textAutoCorrect|textCapWords"
                        android:singleLine="true"
                        android:textColor="?attr/colorPrimary"
                        android:textColorHint="@color/hint"
                        android:textSize="12sp"
                        android:importantForAutofill="no" />
                </ScrollView>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="0"
                android:background="@drawable/ic_filter_background"
                android:contentDescription="@string/filter_movies_button"
                android:src="@drawable/ic_filter" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutRecent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/recent"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewSearchSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/see_all_history"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/progressBarSearch"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/bottom_nav_height">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewRecentAndResults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bottom_nav_height"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_medium_movie_card">

                </androidx.recyclerview.widget.RecyclerView>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</layout>
