<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.sb.moovich.domain.entity.MovieInfo" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.movie_info.MovieInfoFragment">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:progress="@color/primary"
            android:visibility="gone">

        </ProgressBar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageViewBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:foreground="@drawable/backdrop_foreground"
                    android:scaleType="centerCrop"
                    app:load="@{movie.backdrop}"
                    tools:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:fontFamily="@font/chillax_medium"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    app:text="@{movie.name}"
                    tools:text="Dune" />

                <TextView
                    android:id="@+id/textViewGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:stringList="@{movie.genres}"
                    tools:text="Sci-fi Adventure" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:year="@{movie.year}"
                        tools:text="2021" />

                    <TextView
                        android:id="@+id/textViewLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="2dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/ic_time"
                        app:stringTime="@{movie.movieLength}"
                        tools:text="2 h 35 min" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:drawablePadding="2dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_rating_star"
                    app:rating="@{movie.rating}"
                    tools:text="8.5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonWatch"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/watch"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageViewBookmark"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_bookmark" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/gilroy_light"
                    android:text="@{movie.description}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="A mythic and emotionally charged hero's journey, Dune tells the story of Paul Atreides, a brilliant and gifted young man born into a great destiny beyond his understanding, who must travel to the most dangerous planet in the universe to ensure the future of his family and his people. " />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/actors"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewSeeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/see_all"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewActors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    app:spanCount="2"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/item_actor" />

                <TextView
                    android:id="@+id/textViewSimilarMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/horizontal_margin"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/similar_movies"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSimilarMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie_card" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>